[package]
name = "fhevm-decryptions-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async_cell = "0.2.1"
base64 = "0.13.0"
bincode = "1.3.3"
hex = "0.4.3"
moka = "0.9.6"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocksdb = "0.19.0"
serde = "1.0.145"
serde_json = "1.0.86"
